--- a/blogging/templates/blogging/list.html
+++ b/blogging/templates/blogging/list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}{% block content %}
   <h1>Coolest Posts</h1>
+  <h3><a href="{% url 'blog_add' %}">Create a new post</a></h3>
   {% comment %} here is where the query happens {% endcomment %}
   {% for post in post_list %}
   <div class="post">
